# aws-dataexchange-api-samples

subscribers/cpp/adx-for-apis-simple/: CMakeLists.txt  README.md  main.cpp
